# buzzkill

./: .gitignore  Caddyfile  Cargo.toml  README.md  build.rs  buzzkill.service  deploy  prek.toml
.github/workflows/: ci.yml  copilot-review.yml
migrations/: 001_create_sightings.sql  002_add_receiver_location.sql
src/: db.rs  email.rs  gps.rs  main.rs  output.rs  tracker.rs  web.rs
src/hci/: commands.rs  events.rs  mod.rs  socket.rs
src/remoteid/: decode.rs  filter.rs  mod.rs
src/wifi/: frames.rs  mod.rs  socket.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: types.ts
web/src/routes/: +layout.svelte  +page.svelte
