[package]
name = "buzzkill"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["net", "ioctl"] }
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "hostname", "builder"] }
axum = "0.8"
include_dir = "0.7"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gpsd_proto = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
